--- a/index.html
+++ b/index.html
@@ -14,3 +14,21 @@ But it must have the following features:
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
   https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>MOTIVATIONAL POSTER</title>
+  <link href="./style.css" rel="stylesheet"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Libre+Baskerville&display=swap" rel="stylesheet">
+</head>
+<body>
+      <div id="mydiv">
+        <img src="./assets/images/meme1.png" alt="memeimg"/>
+        <h1>When you finally finish your project</h1>
+        <p>Bugs from somewhere: Naaa ready dhaan varavaa....</p>
+      </div>
+</body>
+</html>
